Admin GUI improvements

--- a/src/app/components/admin/admin-custom-nav-link/admin-custom-nav-link-edit/admin-custom-nav-link-edit.component.html
+++ b/src/app/components/admin/admin-custom-nav-link/admin-custom-nav-link-edit/admin-custom-nav-link-edit.component.html
@@ -54,7 +54,7 @@
                     <div class="card bg-lighter p-3 inner-card">
                         <div class="card-body">
                             <p class="card-text helv">
-                                Links appear in order from left-to-right, 1-5. If blank, no link will appear.
+                                <b><i class="fa fa-info-circle"></i>&nbsp; Links appear in order from left-to-right, 1-5. If blank, no link will appear.</b>
                             </p>
                             <div class="form-group">
                                 <hr class="inset-hr"/>
