--- a/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
+++ b/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
@@ -104,9 +104,21 @@
                             </a>
                         </div>
                         <div class="text-right m-2">
+                            <a [routerLink]="['/admin/custom-nav-links']"
+                               class="btn btn-outline-dark borderless">
+                                <i class="fa fa-link"></i>&nbsp;Edit Navbar Links
+                            </a>
+                        </div>
+                        <div class="text-right m-2">
+                            <a [routerLink]="['/admin/page-cards']"
+                               class="btn btn-outline-dark borderless">
+                                <i class="fa fa-passport"></i>&nbsp;Edit Page Cards
+                            </a>
+                        </div>
+                        <div class="text-right m-2">
                             <a [routerLink]="['/admin/cards']"
                                class="btn btn-outline-dark borderless">
-                                <i class="fa fa-passport"></i>&nbsp;Edit Cards
+                                <i class="fa fa-passport"></i>&nbsp;Edit Home Page Cards
                             </a>
                         </div>
                         <div class="text-right m-2">
