--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
@@ -25,8 +25,12 @@ h1, h2, h3 {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 3px 1px -2px rgba(0, 0, 0, 0.12),
     0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1000;
 }
 
+.page-container {
+    margin-bottom: 10em;
+}
 
 .fa-caret-square-down {
     color: #9d9fa1 !important;
@@ -123,6 +127,60 @@ a.btn.btn-warning.btn-lg:hover {
     text-decoration: none;
     padding: 0.5em 2em;
     font-size: 18px;
+}
+
+/*------------------------------------------------
+     Calendar
+------------------------------------------------*/
+/* Active Tab */
+a[aria-selected=true] {
+    background-color: #FEBE10 !important;
+    border-radius: 0;
+    padding-bottom: 0;
+    height: 47px;
+}
+
+a[aria-selected=true]::after {
+    display: block;
+    content: "";
+    background: #FEBE10;
+    width: 25px;
+    height: 25px;
+    position: relative;
+    left: 45%;
+    bottom: 2px;
+    transform: rotate(45deg);
+    z-index: 1;
+}
+
+li.nav-item > a.nav-link {
+    color: #004060;
+}
+
+li.nav-item:hover {
+    background-color: #EBEBEB;
+}
+
+.cal-content {
+    background-color: #fff;
+}
+
+a:link, a:link:active {
+    color: #004060;
+    text-decoration: none;
+}
+
+h4, p, li {
+    font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;
+}
+
+#calTab {
+    border: 1px solid #EBEBEB;
+}
+
+.tab-content {
+    border: 1px solid #EBEBEB;
+    border-top: #fff;
 }
 
 
