--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -70,6 +70,7 @@
                         <th scope="col" style="vertical-align: top;">Publish <br> Date</th>
                         <th scope="col" style="vertical-align: top;">Calendar</th>
                         <th scope="col" style="vertical-align: top;">Author</th>
+                        <th scope="col" style="vertical-align: top;">Cards</th>
                         <th scope="col" style="vertical-align: top;">Options</th>
                     </tr>
                     </thead>
@@ -129,16 +130,16 @@
                         <td scope="col" style="text-align:center;">
                             <span>{{ page.author }}</span>
                         </td>
-                        <!--<td scope="col" style="text-align:center;">-->
-                        <!--<span class="badge badge-outline-success" *ngIf="user.admin">-->
-                        <!--Yes-->
-                        <!--</span>-->
-                        <!--<span class="badge badge-outline-danger" *ngIf="!user.admin">-->
-                        <!--No-->
-                        <!--</span>-->
-                        <!--</td>-->
-                        <td>
-                            <a class="btn btn-default btn-xs icon-btn md-btn-flat user-tooltip"
+                        <td scope="col" style="text-align:center;">
+                        <span class="badge badge-outline-success" *ngIf="page.hasCards">
+                            <i class="fa fa-check-circle"></i>
+                        </span>
+                            <span class="badge badge-outline-danger" *ngIf="!page.hasCards">
+                            <i class="fa fa-times-circle"></i>
+                        </span>
+                        </td>
+                        <td style="text-align:center;">
+                            <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip"
                                [routerLink]="['/admin/pages/', page.url]">
                                 <i class="fa fa-pencil"></i>&nbsp;
                             </a>
@@ -148,23 +149,23 @@
                 </table>
             </div>
 
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link" [routerLink]="['/admin/pages']" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item"><a class="page-link" [routerLink]="['/admin/pages']">1</a></li>
-                    <li class="page-item">
-                        <a class="page-link" [routerLink]="['/admin/pages']" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+            <!--<nav aria-label="Page navigation example">-->
+            <!--<ul class="pagination">-->
+            <!--<li class="page-item">-->
+            <!--<a class="page-link" [routerLink]="['/admin/pages']" aria-label="Previous">-->
+            <!--<span aria-hidden="true">&laquo;</span>-->
+            <!--<span class="sr-only">Previous</span>-->
+            <!--</a>-->
+            <!--</li>-->
+            <!--<li class="page-item"><a class="page-link" [routerLink]="['/admin/pages']">1</a></li>-->
+            <!--<li class="page-item">-->
+            <!--<a class="page-link" [routerLink]="['/admin/pages']" aria-label="Next">-->
+            <!--<span aria-hidden="true">&raquo;</span>-->
+            <!--<span class="sr-only">Next</span>-->
+            <!--</a>-->
+            <!--</li>-->
+            <!--</ul>-->
+            <!--</nav>-->
 
         </div>
 
