--- a/src/app/components/admin/admin-press-release/admin-press-release-details/admin-press-release-details.component.css
+++ b/src/app/components/admin/admin-press-release/admin-press-release-details/admin-press-release-details.component.css
@@ -1,7 +1,7 @@
 /*p, ul, ol, li  {*/
-    /*font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;*/
-    /*line-height: 2;*/
-    /*font-size: 18px;*/
+/*font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;*/
+/*line-height: 2;*/
+/*font-size: 18px;*/
 /*}*/
 
 p, ul, ol, li {
@@ -25,6 +25,7 @@ h1, h2, h3 {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 3px 1px -2px rgba(0, 0, 0, 0.12),
     0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1000;
 }
 
 li.nav-item {
@@ -85,6 +86,10 @@ h2.card-sec-title {
     font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;
     font-size: 18px;
     line-height: 2;
+}
+
+.press-release-container {
+    margin-bottom: 10em;
 }
 
 .details-body > h2 {
