--- a/src/app/components/admin/admin-press-release/admin-press-release-details/admin-press-release-details.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-details/admin-press-release-details.component.html
@@ -1,10 +1,27 @@
 <!-- * ADMIN-PressRelease-DETAILS (PREVIEW) * -->
+<!-- * If Regular PressRelease * -->
+<div *ngIf="pressRelease" [@simpleFadeAnimation]="'in'">
+    <div class="row">
+        <div class="container press-release-container">
+            <h3>{{ pressRelease.title}}</h3>
+            <p class="text-light">
+                <small>{{ pressRelease.publishOn | date }}</small>
+            </p>
+
+            <p [innerHTML]="pressRelease.summary" class="details-body"></p>
+
+            <div [innerHTML]="body" class="details-body"></div>
+        </div>
+    </div>
+</div>
+
+
 <!-- * Edit Options Sub-Navbar * -->
 <div class="row mb-4">
     <div class="container">
         <!-- * Edit Navbar Panel * -->
         <div class="col-sm-12">
-            <nav class="navbar navbar-expand-lg fixed-top text-light" style="background-color: #1C202B;"
+            <nav class="navbar navbar-expand-lg fixed-bottom text-light" style="background-color: #1C202B;"
                  *ngIf="pressRelease">
                 <a class="navbar-brand" href="#">
                     <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/gray-ddw-150.png" width="100"
@@ -17,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <i class="fa fa-dot-circle"></i> {{ pressRelease.title }}
+                            <i class="fa fa-h1"></i> {{ pressRelease.title | slice:0:40 }}
                         </li>
                         <li class="nav-item">
                             <i class="fa fa-user"></i> {{ pressRelease.author }}
@@ -49,22 +66,5 @@
             </nav>
         </div>
 
-    </div>
-</div>
-
-
-<!-- * If Regular PressRelease * -->
-<div *ngIf="pressRelease" [@simpleFadeAnimation]="'in'">
-    <div class="row">
-        <div class="container">
-            <h3>{{ pressRelease.title}}</h3>
-            <p class="text-light">
-                <small>{{ pressRelease.publishOn | date }}</small>
-            </p>
-
-            <p [innerHTML]="pressRelease.summary" class="details-body"></p>
-
-            <div [innerHTML]="body" class="details-body"></div>
-        </div>
     </div>
 </div>
